# Playground

./: .env.example  .gitignore  README.md  resume_prompt.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_candidate_profiles.py  0003_generated_resumes.py  0004_resume_intelligence_packages.py  (+2 more)
backend/app/: __init__.py  main.py
backend/data/: ai_usage.sqlite3  auth_store.json
backend/jobyro_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: check_database.py
backend/tests/: test_ats_keyword_extraction.py  test_evidence_aware_semantic_expansion.py  test_experience_generation_service.py  test_experience_planner.py  test_experience_prompt_builder.py  test_generate_resume_package_route.py  test_generate_resume_request_contract.py  test_generate_resume_response_contract_audit.py  test_grounded_jd_extraction_prompt.py  test_job_analysis_schema.py  test_keyword_deduplication.py  test_keyword_priority_scoring.py  test_profile_matching.py  test_profile_service.py  test_resume_export.py  test_resume_generation_pipeline.py  test_resume_intelligence_inspector.py  test_resume_intelligence_package.py  test_resume_output_contract_audit.py  test_resume_section_enhancement.py  test_semantic_generation_pipeline_audit.py  test_semantic_matching_audit.py  test_semantic_responsibility_audit.py  test_skill_evidence_index.py  test_skill_normalization.py  test_skill_registry.py  test_skills_planner.py  test_skills_rendering.py  test_summary_generation_service.py  test_summary_planner.py
(+145 files in other folders)
