[project]
name = "jobyro-api"
version = "0.1.0"
description = "FastAPI backend for Jobyro."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "openai>=1.40.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "psycopg2-binary>=2.9.9",
  "pyotp>=2.9.0",
  "pypdf>=6.0.0",
  "qrcode[pil]>=8.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.9",
  "reportlab>=5.0.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "uvicorn[standard]>=0.30.5",
  "weasyprint>=62.3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "data*", "tmp*", "tests*"]
